# fast_api_session

./: .gitignore  .python-version  Makefile  README.md  alembic.ini  database.py  main.py  model.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: 07202eadb10a_added_items_table.py
src/: config.py  database.py  main.py  model.py  schemas.py
tests/: test_main.py
